--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
-body {background-color: gray;}
 
-h1 {color: white; 
-	text-alignment: center; }
+body {background-color: lightblue;}
 
-	p {font-family: verdana;
-		font-size: 20px;
-		color: lightblue;
-	}
+h1 {color: black;}
+
+img {float:left; border-style:solid;border-image: 2px; border-color:black; margin-top:10px; margin-bottom:10px; margin-right:10px; margin-left:10px; 
+}
+
+img:nth-of-type(2){float:right; border-style:solid; border-image: 2px; border-color:black; margin-top:10px; margin-bottom:10px; margin-right:10px; margin-left:10px;
+}
+
+p {font-size: 18px; color: black; }
